unpackaged/main/default/objects/Opportunity/fields/Pre_call__c.field-meta.xml
<CustomField>
    <fullName>Pre_call__c</fullName>
    <label>Pre-call</label>
    <length>100</length>
    <type>Text</type>
</CustomField>