unpackaged/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>100</length>
    <type>Text</type>
</CustomField>